--- a/node/index.html
+++ b/node/index.html
@@ -16,7 +16,7 @@
 <meta name="HandheldFriendly" content="true" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" href="/core/misc/favicon.ico" type="image/vnd.microsoft.icon" />
-<link rel="alternate" type="application/rss+xml" title="" href="http://127.0.0.1/rss.xml" />
+<link rel="alternate" type="application/rss+xml" title="" href="https://robert-castelo-cps.github.io/rss.xml" />
 
     <title>Welcome! | Drupal AI Camp</title>
     <link rel="stylesheet" media="all" href="/sites/default/files/css/css_CRakNNlgeZcKw5lOIPzcYRl3a1gUQghTrDJTX3gUk6Y.css?delta=0&amp;language=en&amp;theme=custom_event&amp;include=eJwrriwuSc3VT0osTtVJSwWyyxL103PykxJzdItLKnMy89J1kkuLS_Jz41PLUvNK0OXKMlPLi_XBpF5ufkppTioAGhkf6w" />
@@ -261,7 +261,7 @@
 <!-- THEME DEBUG -->
 <!-- THEME HOOK: 'views_view' -->
 <!-- BEGIN OUTPUT from 'core/themes/stable9/templates/views/views-view.html.twig' -->
-<div class="js-view-dom-id-b7fe240b8e8c28bc464c008500f7713b9b57613048b535c1568b28dbeb0404ff">
+<div class="js-view-dom-id-04113b56f470caa3e12200437f38619b6aaace01738d764e464d6c612b09cd44">
   
   
   
@@ -290,7 +290,7 @@
 <!-- THEME DEBUG -->
 <!-- THEME HOOK: 'feed_icon' -->
 <!-- BEGIN OUTPUT from 'core/themes/stable9/templates/media-library/feed-icon.html.twig' -->
-<a href="http://127.0.0.1/rss.xml" class="feed-icon">
+<a href="https://robert-castelo-cps.github.io/rss.xml" class="feed-icon">
   Subscribe to 
 </a>
 
