--- a/schedule/2024-05-31/index.html
+++ b/schedule/2024-05-31/index.html
@@ -18,8 +18,8 @@
 <meta name="HandheldFriendly" content="true" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" href="/core/misc/favicon.ico" type="image/vnd.microsoft.icon" />
-<link rel="canonical" href="http://127.0.0.1/schedule/2024-05-31" />
-<link rel="shortlink" href="http://127.0.0.1/node/3" />
+<link rel="canonical" href="https://robert-castelo-cps.github.io/schedule/2024-05-31" />
+<link rel="shortlink" href="https://robert-castelo-cps.github.io/node/3" />
 
     <title>Schedule 2024 | Drupal AI Camp</title>
     <link rel="stylesheet" media="all" href="/sites/default/files/css/css_Q8jpR5szRh_Gl4mHcgy5k-ExD14QGz99v8uy6ZhZqCA.css?delta=0&amp;language=en&amp;theme=custom_event&amp;include=eJwrriwuSc3VT0osTtVJSwWyyxL103PykxJzdItLKnMy89J1kkuLS_Jz41PLUvNK0OQAABEYgA" />
