Update FreelyGive logo, and contact email. Add photos to Venue. Improved homepage banner text.

--- a/call-for-speakers/2024-05-31/index.html
+++ b/call-for-speakers/2024-05-31/index.html
@@ -130,7 +130,7 @@
   
   <div>
     
-            <div><p>Are you passionate about AI and Drupal?&nbsp;</p><p>Drupal AI Camp is looking for speakers who can inspire, inform, and ignite discussions around the latest trends and innovations in Drupal and Artificial Intelligence.</p><h2>Event Details</h2><p><strong>Date:</strong> &nbsp;24th October 2024<br><strong>Location:</strong> China Exchange, 32A Gerrard Street, London, UK</p><h2>Why Speak at Drupal AI Camp?</h2><ul><li><strong>Showcase</strong> your expertise to a dedicated community</li><li><strong>Network</strong> with other professionals and AI thought leaders</li><li><strong>Contribute</strong> to the growth and innovation in the Drupal and AI ecosystems</li></ul><h2>Apply Now</h2><p>We’re looking for dynamic presentations that offer real-world insights into Drupal and AI. If you’re interested in speaking, please fill out our <strong>Call for Speakers </strong>form:</p><p><a class="btn custom-btn" href="https://forms.gle/JLEc4AhvQ9QU2HzP8">Apply now</a></p></div>
+            <div><p>Are you passionate about AI and Drupal</p><p>Drupal AI Camp is looking for speakers who can inspire, inform, and ignite discussions around the latest trends and innovations in Drupal and Artificial Intelligence.</p><h2>Event Details</h2><p><strong>Date:</strong> 24th October 2024<br><strong>Location:</strong> China Exchange, 32A Gerrard Street, London, UK</p><h2>Why Speak at Drupal AI Camp?</h2><ul><li><strong>Showcase</strong> your expertise to a dedicated community</li><li><strong>Network</strong> with other professionals and AI thought leaders</li><li><strong>Contribute</strong> to the growth and innovation in the Drupal and AI ecosystems</li></ul><h2>Apply Now</h2><p>We’re looking for dynamic presentations that offer real-world insights into Drupal and AI. If you’re interested in speaking, please fill out our <strong>Call for Speakers </strong>form:</p><p><a class="btn custom-btn" href="https://forms.gle/JLEc4AhvQ9QU2HzP8">Apply now</a></p></div>
       
   </div>
 
@@ -233,8 +233,8 @@
         </p>
 
         <p class="text-white d-flex">
-          <a href="mailto:hello@freelygive.org.uk" class="site-footer-link">
-            hello@freelygive.org.uk
+          <a href="mailto:catia.penas@freelygive.org.uk" class="site-footer-link">
+            catia.penas@freelygive.org.uk
           </a>
         </p>
               </div>
