--- a/contact/index.html
+++ b/contact/index.html
@@ -130,7 +130,7 @@
   
   <div>
     
-            <div><p>If you would like to find out more or have any questions about Drupal AI Camp please contact our event manager:</p><p><strong>Catia Penas</strong><br><strong>Email:</strong> <a href="mailto:hello@freelygive.org.uk">hello@freelygive.org.uk</a><br><strong>Phone:</strong> <a href="tel:+442039207023">+44 203920 7023</a></p></div>
+            <div><p>If you would like to find out more or have any questions about Drupal AI Camp please contact our event manager:</p><p><strong>Catia Penas</strong><br><strong>Email:</strong> <a href="mailto:catia.penas@freelygive.org.uk">catia.penas@freelygive.org.uk</a><br><strong>Phone:</strong> <a href="tel:+442039207023">+44 203920 7023</a></p></div>
       
   </div>
 
@@ -233,8 +233,8 @@
         </p>
 
         <p class="text-white d-flex">
-          <a href="mailto:hello@freelygive.org.uk" class="site-footer-link">
-            hello@freelygive.org.uk
+          <a href="mailto:catia.penas@freelygive.org.uk" class="site-footer-link">
+            catia.penas@freelygive.org.uk
           </a>
         </p>
               </div>
