--- a/node/index.html
+++ b/node/index.html
@@ -120,7 +120,7 @@
 <div id="block-custom-event-content">
   
     
-      <div class="views-element-container"><div class="js-view-dom-id-381a48519a7048091300ad323eeee2cfdaac984963c1646ba7e9a401e67cbb89">
+      <div class="views-element-container"><div class="js-view-dom-id-8a8c377ac4812403ac5f3e84caf858d2ae49ed5923f890aac6a6e142ad96c83f">
   
   
   
@@ -240,8 +240,8 @@
         </p>
 
         <p class="text-white d-flex">
-          <a href="mailto:hello@freelygive.org.uk" class="site-footer-link">
-            hello@freelygive.org.uk
+          <a href="mailto:catia.penas@freelygive.org.uk" class="site-footer-link">
+            catia.penas@freelygive.org.uk
           </a>
         </p>
               </div>
