--- a/ticket-page/index.html
+++ b/ticket-page/index.html
@@ -233,8 +233,8 @@
         </p>
 
         <p class="text-white d-flex">
-          <a href="mailto:hello@freelygive.org.uk" class="site-footer-link">
-            hello@freelygive.org.uk
+          <a href="mailto:catia.penas@freelygive.org.uk" class="site-footer-link">
+            catia.penas@freelygive.org.uk
           </a>
         </p>
               </div>
