Change event name to "Drupal Camp AI"

--- a/node/index.html
+++ b/node/index.html
@@ -9,7 +9,7 @@
 <link rel="icon" href="/core/misc/favicon.ico" type="image/vnd.microsoft.icon" />
 <link rel="alternate" type="application/rss+xml" title="" href="https://www.drupalcamp.ai/rss.xml" />
 
-    <title>Welcome! | Drupal AI Camp</title>
+    <title>Welcome! | Drupal Camp AI</title>
     <link rel="stylesheet" media="all" href="/sites/default/files/css/css_CRakNNlgeZcKw5lOIPzcYRl3a1gUQghTrDJTX3gUk6Y.css?delta=0&amp;language=en&amp;theme=custom_event&amp;include=eJwrriwuSc3VT0osTtVJSwWyyxL103PykxJzdItLKnMy89J1kkuLS_Jz41PLUvNK0OXKMlPLi_XBpF5ufkppTioAGhkf6w" />
 <link rel="stylesheet" media="all" href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;400;700&amp;display=swap" />
 <link rel="stylesheet" media="all" href="/sites/default/files/css/css_ykjFe1oNjf5q2wfNLPFYtKHJJoKdAmViurR64HjfAFs.css?delta=2&amp;language=en&amp;theme=custom_event&amp;include=eJwrriwuSc3VT0osTtVJSwWyyxL103PykxJzdItLKnMy89J1kkuLS_Jz41PLUvNK0OXKMlPLi_XBpF5ufkppTioAGhkf6w" />
@@ -44,7 +44,7 @@
       <a href="/" rel="home">
       <img src="/themes/custom/custom_event/logo.png" alt="Home" />
     </a>
-        <a href="/" class="navbar-brand" rel="home">Drupal AI Camp</a>
+        <a href="/" class="navbar-brand" rel="home">Drupal Camp AI</a>
     
 </div>
 
@@ -120,7 +120,7 @@
 <div id="block-custom-event-content">
   
     
-      <div class="views-element-container"><div class="js-view-dom-id-a78f85dcde2304b294c9744e4e66d40486ad3f8ff3602b7e4fb3daa9b7763a0b">
+      <div class="views-element-container"><div class="js-view-dom-id-d86e3e9697ad4525dcf5d7f9803886d94a768100501a05750912f781d6fe752b">
   
   
   
