--- a/terms/index.html
+++ b/terms/index.html
@@ -10,7 +10,7 @@
 <link rel="canonical" href="https://www.drupalcamp.ai/terms" />
 <link rel="shortlink" href="https://www.drupalcamp.ai/node/8" />
 
-    <title>Terms &amp; Conditions | Drupal AI Camp</title>
+    <title>Terms &amp; Conditions | Drupal Camp AI</title>
     <link rel="stylesheet" media="all" href="/sites/default/files/css/css_Q8jpR5szRh_Gl4mHcgy5k-ExD14QGz99v8uy6ZhZqCA.css?delta=0&amp;language=en&amp;theme=custom_event&amp;include=eJwrriwuSc3VT0osTtVJSwWyyxL103PykxJzdItLKnMy89J1kkuLS_Jz41PLUvNK0OQAABEYgA" />
 <link rel="stylesheet" media="all" href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;400;700&amp;display=swap" />
 <link rel="stylesheet" media="all" href="/sites/default/files/css/css_ykjFe1oNjf5q2wfNLPFYtKHJJoKdAmViurR64HjfAFs.css?delta=2&amp;language=en&amp;theme=custom_event&amp;include=eJwrriwuSc3VT0osTtVJSwWyyxL103PykxJzdItLKnMy89J1kkuLS_Jz41PLUvNK0OQAABEYgA" />
@@ -45,7 +45,7 @@
       <a href="/" rel="home">
       <img src="/themes/custom/custom_event/logo.png" alt="Home" />
     </a>
-        <a href="/" class="navbar-brand" rel="home">Drupal AI Camp</a>
+        <a href="/" class="navbar-brand" rel="home">Drupal Camp AI</a>
     
 </div>
 
